[package]
name = "lambda-web"
version = "0.2.1"
authors = ["Hanabusa Masahiro"]
description = "Run Rust web frameworks on AWS Lambda"
edition = "2018"
readme = "README.md"
repository = "https://github.com/hanabu/lambda-web"
license = "MIT"
keywords = ["lambda", "actix-web", "axum", "rocket", "warp"]
categories = ["web-programming::http-server"]
exclude = ["/docker/"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["br"]

# Enable one of your favorite web-framework
actix4 = ["actix-web", "actix-http", "actix-service"]
rocket05 = ["rocket"]

# Compress output with Brotli
br = ["brotli"]

[dependencies]
lambda_runtime = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
percent-encoding = "2"

hyper = { version = "1.3", default-features = false, features = [], optional = true }
actix-web = { version = "4", default-features = false, features = ["cookies", "macros"], optional = true }
actix-http = { version = "3", default-features = false, optional = true }
actix-service = { version = "2", optional = true }
rocket = { version = "0.5.0", default-features = false, optional = true }
brotli = { version = "5", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
axum = { version = "0.7", default-features = false, features = ["tokio"] }
warp = { version = "0.3.7", default-features = false }
tower = "0.4"

[[example]]
name = "actix"
required-features = ["actix4"]

[[example]]
name = "axum"
required-features = ["hyper"]

[[example]]
name = "rocket"
required-features = ["rocket05"]

[[example]]
name = "warp"
required-features = ["hyper"]

[profile.release]
# Size optimization
opt-level = "s"
lto = "fat"
codegen-units = 1
